--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,11 +1,7 @@
 services:
   database:
     image: "postgres:16.0-alpine3.18"
-    environment:
-      POSTGRES_HOST: "localhost"
-      POSTGRES_PORT: "5432"
-      POSTGRES_USER: "local_user"
-      POSTGRES_PASSWORD: "local_password"
-      POSTGRES_DB: "local_db"
+    env_file:
+      - "../.env"
     ports:
       - "5432:5432"
